--- a/plugins/Flanger/CMakeLists.txt
+++ b/plugins/Flanger/CMakeLists.txt
@@ -17,5 +17,9 @@ add_plugin(Flanger
         ${CMAKE_CURRENT_SOURCE_DIR}/../common_includes  # if any shared headers exist, otherwise omit
 )
 
-target_link_libraries(Flanger PRIVATE JonssonicDSP)
+target_link_libraries(Flanger 
+    PRIVATE 
+        JonssonicDSP
+        JonssonicFramework
+)
 target_include_directories(Flanger PRIVATE ${CMAKE_SOURCE_DIR}/external/JonssonicDSP/include)
