Fixed the issue with non-unique prod code from the python script. Biquad demo works.

--- a/demos/BiquadDemo/CMakeLists.txt
+++ b/demos/BiquadDemo/CMakeLists.txt
@@ -4,7 +4,7 @@ add_plugin(BiquadDemo
     VERSION 0.1.0
     PLUGIN_NAME "BiquadDemo"
     PROD_NAME "BiquadDemo"
-    PROD_CODE TEMP
+    PROD_CODE BqDm
     SYNTH FALSE
 
     SOURCES
