--- a/demos/OversamplingDemo/CMakeLists.txt
+++ b/demos/OversamplingDemo/CMakeLists.txt
@@ -4,7 +4,7 @@ add_plugin(OversamplingDemo
     VERSION 0.1.0
     PLUGIN_NAME "OversamplingDemo"
     PROD_NAME "OversamplingDemo"
-    PROD_CODE TEMP
+    PROD_CODE OsDm
     SYNTH FALSE
 
     SOURCES
