--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -3,6 +3,6 @@
 juce_add_binary_data(JonssonicResources
     SOURCES
         knobs/JonssonicRotarySlider.png
-        logos/Jonssonic_logo_v2.png
+        logos/Jonssonic_logo.png
         # Add more resources as needed
 )
