Big refactor to minimize the juce modules included as well as rehaul of the Template to include plugin specific resources for easy customization per plugin.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -181,16 +181,21 @@ if(PROJECT_IS_TOP_LEVEL)
     message(STATUS "Building example plugins...")
     
 
-    # Scan all folders inside plugins/ and automatically add them as subdirectories, filtering out hidden files and folders starting with underscore
+    # Scan all folders inside plugins/ and automatically add them as subdirectories (do not filter here)
     file(GLOB plugin_dirs RELATIVE ${CMAKE_SOURCE_DIR}/plugins ${CMAKE_SOURCE_DIR}/plugins/*)
+    foreach(plugin_dir IN LISTS plugin_dirs)
+        if(IS_DIRECTORY "${CMAKE_SOURCE_DIR}/plugins/${plugin_dir}")
+            message(STATUS "Adding plugin directory: ${plugin_dir}")
+            add_subdirectory(plugins/${plugin_dir})
+        endif()
+    endforeach()
+
+    # Now filter for valid_plugin_dirs (for ALL_PLUGIN_TARGETS etc.)
     set(valid_plugin_dirs "")
     foreach(plugin_dir IN LISTS plugin_dirs)
         if(IS_DIRECTORY "${CMAKE_SOURCE_DIR}/plugins/${plugin_dir}")
-            # Only skip if the name starts with a dot or underscore
             string(SUBSTRING "${plugin_dir}" 0 1 first_char)
             if(NOT first_char STREQUAL "." AND NOT first_char STREQUAL "_")
-                message(STATUS "Adding plugin directory: ${plugin_dir}")
-                add_subdirectory(plugins/${plugin_dir})
                 list(APPEND valid_plugin_dirs "${plugin_dir}")
             endif()
         endif()
