--- a/plugins/_Template/CMakeLists.txt
+++ b/plugins/_Template/CMakeLists.txt
@@ -15,7 +15,11 @@ add_plugin(Template
 
     INCLUDE_DIRS
         ${CMAKE_CURRENT_SOURCE_DIR}/../common_includes  # if any shared headers exist, otherwise omit
+    RESOURCES
+        logos/Jonssonic_logo.png
+        knobs/JonssonicRotarySlider.png
 )
+
 
 target_link_libraries(Template 
     PRIVATE 
