Refactored compressor, distortion and equalizer plugins

--- a/framework/include/Version.h.in
+++ b/framework/include/Version.h.in
@@ -1,6 +1,6 @@
 #pragma once
 
-#define JONSSONIC_VERSION_MAJOR @JonssonicPlugins_VERSION_MAJOR@
-#define JONSSONIC_VERSION_MINOR @JonssonicPlugins_VERSION_MINOR@
-#define JONSSONIC_VERSION_PATCH @JonssonicPlugins_VERSION_PATCH@
-#define JONSSONIC_VERSION_STRING "@JonssonicPlugins_VERSION@"
+#define JONSSONIC_PLUGINS_VERSION_MAJOR @JonssonicPlugins_VERSION_MAJOR @
+#define JONSSONIC_PLUGINS_VERSION_MINOR @JonssonicPlugins_VERSION_MINOR @
+#define JONSSONIC_PLUGINS_VERSION_PATCH @JonssonicPlugins_VERSION_PATCH @
+#define JONSSONIC_PLUGINS_VERSION_STRING "@JonssonicPlugins_VERSION@"
